overflow fix

--- a/css/general.less
+++ b/css/general.less
@@ -4,6 +4,7 @@
 	/*BACKGROUND*/
 	#innerWrapper,
 	body {
+		overflow-x     : hidden;
 		background     : linear-gradient(135deg, #011d4a, #007eb9, #6b006f, #2f2f2f2e) !important;
 		background-size: 400% 400%;
 		animation      : gradientAnimation 10s ease infinite;
@@ -27,7 +28,6 @@
 	.jobThing,
 	.buildingThing,
 	.workBtn,
-	#fireBtn,
 	#food,
 	#wood,
 	#metal,
@@ -66,6 +66,21 @@
 
 	#logConfigBtn {
 		border-radius: 0px 12px 0px 0px !important;
+	}
+
+	/* AutoTrap toggle */
+	#autoTrapBtn {
+		.button-style();
+		@borderRadius();
+		@shadow-border();
+
+		&.colorSuccess {
+			background: @trimpsGreen  !important;
+		}
+
+		&.colorDanger {
+			background: @trimpsRed  !important;
+		}
 	}
 
 }
